--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200');
+@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap');
 
 /* Skewed Border Demo */
 .skewed-border-demo {
@@ -279,4 +281,104 @@
     left: 0;
     box-sizing: border-box;
     padding: 20px;
+}
+
+/* Icon Growth Card Demo */
+.icon-growth-card-demo {
+    min-height: 100vh;
+    background: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Inconsolata', monospace;
+}
+
+.icon-growth-card-demo .container {
+    width: 1000px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
+.icon-growth-card-demo .container .card {
+    position: relative;
+}
+
+.icon-growth-card-demo .container .card .face {
+    width: 300px;
+    height: 200px;
+    transition: .5s;
+}
+
+.icon-growth-card-demo .container .card .face.face1 {
+    position: relative;
+    background: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(100px);
+}
+
+.icon-growth-card-demo .container .card:hover .face.face1 {
+    background: #ff0057;
+    transform: translateY(0);
+}
+
+.icon-growth-card-demo .container .card .face.face1 .content {
+    opacity: .2;
+    transition: .5s;
+}
+
+.icon-growth-card-demo .container .card:hover .face.face1 .content {
+    opacity: 1;
+}
+
+.icon-growth-card-demo .container .card .face.face1 .content svg {
+    width: 100px !important;
+    height: 100px !important;
+}
+
+.icon-growth-card-demo .container .card .face.face1 .content h3 {
+    margin: 10px 0 0;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.icon-growth-card-demo .container .card .face.face2 {
+    position: relative;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, .8);
+    transform: translateY(-100px);
+}
+
+.icon-growth-card-demo .container .card:hover .face.face2 {
+    transform: translateY(0);
+}
+
+.icon-growth-card-demo .container .card .face.face2 .content p {
+    margin: 0;
+    padding: 0;
+}
+
+.icon-growth-card-demo .container .card .face.face2 .content a {
+    margin: 15px 0 0;
+    padding: 5px;
+    display: inline-block;
+    text-decoration: none;
+    font-weight: 900;
+    color: #333;
+    border: 1px solid #333;
+}
+
+.icon-growth-card-demo .container .card .face.face2 .content a:hover {
+    background: #333;
+    color: #fff;
 }
