--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -382,3 +382,152 @@
     background: #333;
     color: #fff;
 }
+
+/* Circle Growth Icon Card */
+.circle-growth-icon-card-demo {
+    font-family: "Poppins", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #333;
+}
+
+.circle-growth-icon-card-demo .container {
+    width: 1000px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
+.circle-growth-icon-card-demo .container .card {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circle-growth-icon-card-demo .container .card:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(255, 255, 255, .1);
+    z-index: 20;
+    pointer-events: none;
+}
+
+.circle-growth-icon-card-demo .container .card:nth-child(1), 
+.circle-growth-icon-card-demo .container .card:nth-child(1) .overlay {
+    background: linear-gradient(45deg, #3503ad, #f7308c);
+}
+
+.circle-growth-icon-card-demo .container .card:nth-child(2), 
+.circle-growth-icon-card-demo .container .card:nth-child(2) .overlay {
+    background: linear-gradient(45deg, #ccff00, #09afff);
+}
+
+.circle-growth-icon-card-demo .container .card:nth-child(3), 
+.circle-growth-icon-card-demo .container .card:nth-child(3) .overlay {
+    background: linear-gradient(45deg, #e91e63, #ffeb3b);
+}
+
+.circle-growth-icon-card-demo .container .card .imgBx {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.circle-growth-icon-card-demo .container .card .imgBx svg {
+    width: 100px;
+    height: 100px;
+}
+
+.circle-growth-icon-card-demo .container .card .imgBx h2{
+    margin: 10px 0 0;
+    padding: 0;
+    color: #fff;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+.circle-growth-icon-card-demo .container .card .overlay {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    /* background: white; */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+    cursor: pointer;
+    border-radius: 50%;
+    transition: .5s;
+}
+
+.circle-growth-icon-card-demo .container .card .overlay:hover {
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: none;
+    opacity: .9;
+    border-radius: 0;
+}
+
+.circle-growth-icon-card-demo .container .card .overlay:before {
+    content: "Read";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    color: white;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition-delay: .5s;
+}
+
+.circle-growth-icon-card-demo .container .card .overlay:hover:before {
+    display: none;
+    transition-delay: 0s;
+}
+
+.circle-growth-icon-card-demo .container .card .content {
+    padding: 20px;
+    box-sizing: border-box;
+    z-index: 1;
+    pointer-events: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0s;
+    color: white;
+}
+
+.circle-growth-icon-card-demo .container .card .overlay:hover ~ .content {
+    opacity: 1;
+    visibility: visible;
+    transition: .2s;
+    transition-delay: .3s;
+}
+
+.circle-growth-icon-card-demo .container .card .content h2 {
+
+}
+
