--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -1,7 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Raleway:200');
-@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap');
 
 /* Skewed Border Demo */
 .skewed-border-demo {
@@ -527,7 +523,103 @@
     transition-delay: .3s;
 }
 
-.circle-growth-icon-card-demo .container .card .content h2 {
+/* Hover Switch Card Demo */
+
+.hover-switch-card-demo {
+    min-height: 100vh;
+    font-family: "Poppins", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(70, 70, 70);
+}
+
+.hover-switch-card-demo .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.hover-switch-card-demo .container .card {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    margin: 50px 100px;
+}
+
+.hover-switch-card-demo .container .card .face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
 
 }
 
+.hover-switch-card-demo .container .card .face.face1 {
+    top: 0;
+    left: 0;
+    transition-property: left, z-index, transform;
+    transition-delay: 0s, .3s, .3s;
+    transition-duration: .3s, 0s, .3s;
+    z-index: 2;
+    transform: translate(-10px, -10px);
+    border-radius: 15px;
+}
+
+.hover-switch-card-demo .container .card:hover .face.face1 {
+    transition-property: transform, z-index, left;
+    transition-delay: 0s, .3s, .3s;
+    transition-duration: .3s, 0s, .3s;
+    transform: translate(170px, -10px);
+    z-index: 1;
+    left: -160px;
+}
+
+.hover-switch-card-demo .container .card .face.face1 img {
+    max-width: 100%;
+}
+
+.hover-switch-card-demo .container .card .face.face2 {
+    background: #111;
+    top: 0;
+    left: 0;
+    transition-property: left, z-index, transform;
+    transition-delay: 0s, .3s, .3s;
+    transition-duration: .3s, 0s, .3s;
+    z-index: 1;
+    border-radius: 15px;
+}
+
+.hover-switch-card-demo .container .card:hover .face.face2 {
+    transition-property: transform, z-index, left;
+    transition-delay: 0s, .3s, .3s;
+    transition-duration: .3s, 0s, .3s;
+    transform: translateX(-160px);
+    z-index: 2;
+    left: 160px;
+}
+
+
+.hover-switch-card-demo .container .card .face.face2 .content {
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.hover-switch-card-demo .container .card .face.face2 .content h2 {
+    margin: 0;
+    padding: 0;
+    color: white;
+}
+
+.hover-switch-card-demo .container .card .face.face2 .content p {
+    margin: 10px 0 0;
+    padding: 0;
+    color: white;
+}
