--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200');
+@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
