--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -144,8 +144,16 @@
     min-height: 100vh;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.shooting-border-button-demo h2 {
+    font-size: 30px;
+    margin: 20px;
+    text-align: center;
+    color: #1670f0;
 }
 
 .shooting-border-button-demo .container {
@@ -154,6 +162,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 
 .shooting-border-button-demo .container .button-container {
@@ -164,6 +173,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #0c002b;
     border: .5px solid #1671f05d;
     box-shadow: rgba(255, 255, 255, 0.1) 0px 5px 15px;
 }
@@ -182,6 +192,7 @@
 
 .shooting-border-button-demo .container .button-container .shooting-border-button {
     position: relative;
+    background: #0c002b;
     color: #1670f0;
     padding: 30px 60px;
     margin: 10px;
@@ -210,18 +221,21 @@
     padding: 20px 40px;
     font-size: 20px;
     letter-spacing: 2px;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
 }
 
 .shooting-border-button-demo .container .button-container .shooting-border-button.sm {
     padding: 15px 30px;
     font-size: 15px;
     letter-spacing: 2px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
 }
 
 .shooting-border-button-demo .container .button-container .shooting-border-button.xs {
     padding: 10px 20px;
     font-size: 10px;
     letter-spacing: 2px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
 }
 
 .shooting-border-button-demo .container .button-container .shooting-border-button:before {
@@ -243,17 +257,6 @@
     height: 2px;
     background: linear-gradient(to right, #0c002b, #1779ff);
     animation: animateTop 2s linear infinite;
-    /* animation-delay: 2.5s; */
-}
-
-.shooting-border-button-demo .container .button-container .shooting-border-button.md:hover span:nth-child(1),
-.shooting-border-button-demo .container .button-container .shooting-border-button.md:hover span:nth-child(3) {
-    height: 1.5px;
-}
-
-.shooting-border-button-demo .container .button-container .shooting-border-button.md:hover span:nth-child(2),
-.shooting-border-button-demo .container .button-container .shooting-border-button.md:hover span:nth-child(4) {
-    width: 1px;
 }
 
 .shooting-border-button-demo .container .button-container .shooting-border-button.sm:hover span:nth-child(1),
@@ -343,3 +346,312 @@
         transform: translateY(-100%);
     }
 }
+
+/* Animated Outline Button Demo */
+.animated-outline-button-demo {
+    margin: 0;
+    padding: 0;
+    background: #262626;
+    /* font-family: sans-serif; */
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.animated-outline-button-demo h2 {
+    font-size: 30px;
+    margin: 20px;
+    text-align: center;
+    color: white;
+}
+
+.animated-outline-button-demo .container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.animated-outline-button-demo .container .button-container {
+    position: relative;
+    width: 70%;
+    height: 200px;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: .5px solid black;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 15px;
+}
+
+.animated-outline-button-demo .container .button-container:before {
+    content: attr(data-text);
+    position: absolute;
+    background: #262626;
+    color: #00bcd4;
+    padding: 5px 10px;
+    top: -15px;
+    left: 2%;
+    border: .5px solid rgba(255, 255, 255, 0.5);
+    z-index: 1;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button {
+    position: relative;
+    width: 180px;
+    height: 60px;
+    margin: 5px;
+    text-align: center;
+    line-height: 60px;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    font-size: 24px;
+    letter-spacing: 2px;
+    color: white;
+    text-decoration: none;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.xlg {
+    width: 210px;
+    height: 70px;
+    line-height: 70px;
+    font-size: 28px;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.lg {
+    width: 180px;
+    height: 60px;
+    line-height: 60px;
+    font-size: 24px;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.md {
+    width: 160px;
+    height: 55px;
+    line-height: 55px;
+    font-size: 20px;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.sm {
+    width: 130px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 16px;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.xs {
+    width: 100px;
+    height: 35px;
+    line-height: 35px;
+    font-size: 12px;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button svg,
+.animated-outline-button-demo .container .button-container .animated-outline-button svg rect {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    fill: transparent;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button svg rect {
+    stroke: white;
+    stroke-width: 4;
+    transition: 1s;
+    stroke-dasharray: 500, 500;
+    stroke-dashoffset: 0;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button:hover svg rect {
+    stroke-dasharray: 100, 400;
+    stroke-dashoffset: 220;
+    stroke: #00bcd4;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.xlg svg rect {
+    stroke-dasharray: 560, 500;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.xlg:hover svg rect {
+    stroke-dasharray: 110, 400;
+    stroke-dashoffset: 180;
+    stroke: #00bcd4;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.lg svg rect {
+    stroke-dasharray: 500, 500;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.lg:hover svg rect {
+    stroke-dasharray: 100, 400;
+    stroke-dashoffset: 220;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.md svg rect {
+    stroke-dasharray: 430, 500;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.md:hover svg rect {
+    stroke-dasharray: 80, 350;
+    stroke-dashoffset: 175;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.sm svg rect {
+    stroke-dasharray: 340, 500;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.sm:hover svg rect {
+    stroke-dasharray: 65, 350;
+    stroke-dashoffset: 212;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.xs svg rect {
+    stroke-dasharray: 270, 500;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.xs:hover svg rect {
+    stroke-dasharray: 50, 350;
+    stroke-dashoffset: 238;
+}
+
+/* Oscillating Solid Button Demo */
+.oscillating-solid-button-demo {
+    margin: 0;
+    padding: 0;
+    background: #262626;
+    font-family: sans-serif;
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.oscillating-solid-button-demo h2 {
+    font-size: 30px;
+    margin: 20px;
+    text-align: center;
+    color: white;
+}
+
+.oscillating-solid-button-demo .container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.oscillating-solid-button-demo .container .button-container {
+    position: relative;
+    width: 70%;
+    height: 120px;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: .5px solid #03a8f487;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px;
+}
+
+.oscillating-solid-button-demo .container .button-container:before {
+    content: attr(data-text);
+    position: absolute;
+    background: #262626;
+    color: #03a9f4;
+    padding: 5px 10px;
+    top: -15px;
+    left: 2%;
+    border: .5px solid #03a8f487;
+    z-index: 1;
+}
+
+.oscillating-solid-button-demo .container .button-container .oscillating-solid-button {
+    position: relative;
+    margin: 5px;
+    padding: 15px 30px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+    letter-spacing: 2px;
+    font-size: 20px;
+    z-index: 1;
+}
+
+.oscillating-solid-button-demo .container .button-container .oscillating-solid-button.xlg {
+    padding: 20px 40px;
+    font-size: 25px;
+}
+
+.oscillating-solid-button-demo .container .button-container .oscillating-solid-button.lg {
+    padding: 15px 30px;
+    font-size: 20px;
+}
+
+.oscillating-solid-button-demo .container .button-container .oscillating-solid-button.md {
+    padding: 12px 24px;
+    font-size: 18px;
+}
+
+.oscillating-solid-button-demo .container .button-container .oscillating-solid-button.sm {
+    padding: 8px 16px;
+    font-size: 16px;
+}
+
+.oscillating-solid-button-demo .container .button-container .oscillating-solid-button.xs {
+    padding: 5px 10px;
+    font-size: 12px;
+}
+
+.oscillating-solid-button-demo .container .button-container .oscillating-solid-button:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #03a9f4;
+    z-index: -1;
+    transition: transform .5s;
+    transform-origin: bottom right;
+    transform: scale(0);
+}
+
+.oscillating-solid-button-demo .container .button-container .oscillating-solid-button:hover:before {
+    transition: transform .5s;
+    transform-origin: top left;
+    transform: scale(1);
+}
+
+.oscillating-solid-button-demo .container .button-container .oscillating-solid-button:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: 2px solid white;
+    z-index: -1;
+    transition: transform .5s;
+    transform-origin: top left;
+    box-sizing: border-box;
+    transform: scale(1);
+}
+
+.oscillating-solid-button-demo .container .button-container .oscillating-solid-button:hover:after {
+    transition: transform .5s;
+    transform-origin: bottom right;
+    transform: scale(0);
+}
+
+
