--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -430,9 +430,9 @@
 }
 
 .animated-outline-button-demo .container .button-container .animated-outline-button.xs {
-    width: 100px;
-    height: 35px;
-    line-height: 35px;
+    width: 90px;
+    height: 30px;
+    line-height: 30px;
     font-size: 12px;
 }
 
@@ -452,6 +452,14 @@
     transition: 1s;
     stroke-dasharray: 500, 500;
     stroke-dashoffset: 0;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.sm svg rect {
+    stroke-width: 3;
+}
+
+.animated-outline-button-demo .container .button-container .animated-outline-button.xs svg rect {
+    stroke-width: 2;
 }
 
 .animated-outline-button-demo .container .button-container .animated-outline-button:hover svg rect {
@@ -503,7 +511,7 @@
 
 .animated-outline-button-demo .container .button-container .animated-outline-button.xs:hover svg rect {
     stroke-dasharray: 50, 350;
-    stroke-dashoffset: 238;
+    stroke-dashoffset: 258;
 }
 
 /* Oscillating Solid Button Demo */
@@ -607,6 +615,12 @@
     transform-origin: top left;
     box-sizing: border-box;
     transform: scale(1);
+}
+
+.oscillating-solid-button-demo .container .button-container .oscillating-solid-button.sm:after,
+.oscillating-solid-button-demo .container .button-container .oscillating-solid-button.xs:after {
+    border: 1px solid white;
+
 }
 
 .oscillating-solid-button-demo .container .button-container .oscillating-solid-button:hover:after {
@@ -772,7 +786,8 @@
     background: #050801;
 }
 
-.neon-reflective-button-demo h2 {
+.neon-reflective-button-demo h2,
+.neon-reflective-button-demo h3 {
     color: white;
 }
 
@@ -780,6 +795,7 @@
     height: 250px;
     border: .5px solid rgba(255, 255, 255, 0.5);
     box-shadow: rgba(255, 255, 255, 0.2) 0px 5px 15px;
+    flex-wrap: wrap;
 }
 
 .neon-reflective-button-demo .container .button-container:before {
@@ -794,6 +810,8 @@
     padding: 25px 30px;
     margin: 5px;
     color: #03e9f4;
+    background: transparent;
+    border: none;
     font-size: 24px;
     text-decoration: none;
     text-transform: uppercase;
@@ -801,6 +819,14 @@
     transition: .5s;
     letter-spacing: 4px;
     -webkit-box-reflect: below 1px linear-gradient(transparent, #0005)
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button:hover {
+    cursor: pointer;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button:focus {
+    outline: none;
 }
 
 .neon-reflective-button-demo .container .button-container .neon-reflective-button.xlg {
@@ -829,7 +855,7 @@
 
 .neon-reflective-button-demo .container .button-container .neon-reflective-button.xs {
     padding: 10px 15px;
-    font-size: 12px;
+    font-size: 10px;
     letter-spacing: 2px;
 }
 
@@ -901,12 +927,24 @@
     display: block;
 }
 
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.bd-no span {
+    display: none;
+}
+
 .neon-reflective-button-demo .container .button-container .neon-reflective-button span:nth-child(1) {
     top: 0;
     left: -100%;
     width: 100%;
     height: 2px;
     background: linear-gradient(90deg, transparent, #03e9f4);
+    animation: neon-reflective-1 3s linear infinite;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.xs span:nth-child(1) {
+    height: 1px;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.bd-f span:nth-child(1) {
     animation: neon-reflective-1 1s linear infinite;
 }
 
@@ -925,6 +963,15 @@
     width: 2px;
     height: 100%;
     background: linear-gradient(180deg, transparent, #03e9f4);
+    animation: neon-reflective-2 3s linear infinite;
+    animation-delay: .75s;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.xs span:nth-child(2) {
+    width: 1px;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.bd-f span:nth-child(2) {
     animation: neon-reflective-2 1s linear infinite;
     animation-delay: .25s;
 }
@@ -944,6 +991,15 @@
     width: 100%;
     height: 2px;
     background: linear-gradient(270deg, transparent, #03e9f4);
+    animation: neon-reflective-3 3s linear infinite;
+    animation-delay: 1.5s;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.xs span:nth-child(3) {
+    height: 1px;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.bd-f span:nth-child(3) {
     animation: neon-reflective-3 1s linear infinite;
     animation-delay: .5s;
 }
@@ -963,6 +1019,15 @@
     width: 2px;
     height: 100%;
     background: linear-gradient(360deg, transparent, #03e9f4);
+    animation: neon-reflective-4 3s linear infinite;
+    animation-delay: 2.25s;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.xs span:nth-child(4) {
+    width: 1px;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.bd-f span:nth-child(4) {
     animation: neon-reflective-4 1s linear infinite;
     animation-delay: .75s;
 }
