--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,12 @@
 body {
     position: relative;
 }
+
+.demo-section {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
