--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -1127,6 +1127,14 @@
     box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 5px;
 }
 
+.liquid-wave-button-demo .liquid-wave-button:focus {
+    outline: none;
+}
+
+.liquid-wave-button-demo .liquid-wave-button:hover {
+    cursor: pointer;
+}
+
 .liquid-wave-button-demo .liquid-wave-button span {
     position: relative;
     z-index: 1;
