--- a/src/components/codewindows/codewindows.css
+++ b/src/components/codewindows/codewindows.css
@@ -1,18 +1,21 @@
 .code-box {
-    width: 90%;
-    height: 600px;
+    width: 75%;
+    /* height: 560px; */
     margin: 30px auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* background: #0d428c; */
     background: black;
-    border-radius: 15px;
-    box-shadow: rgba(0, 0, 0, 0.8) 0px 20px 50px;
+    justify-content: space-around;
+    /* background: black; */
+    /* border-radius: 15px; */
+    /* box-shadow: rgba(0, 0, 0, .9) 0px 30px 40px; */
+    box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 10px;
 }
 
 .code-selection-box {
     width: 100%;
-    height: 50px;
+    /* height: 30px; */
     padding: 10px;
     display: flex;
     justify-content: flex-start;
@@ -22,6 +25,7 @@
 .code-selection-box button {
     background: none;
     border: none;
+    transition: 1s;
 }
 
 #html:focus,
@@ -29,22 +33,34 @@
     outline: 0;
 }
 
+#html:hover,
+#css:hover {
+    cursor: pointer;
+    filter: brightness(2);
+}
+
 #html svg,
 #css svg {
     width: 40px;
     height: 40px;
-    color: lightblue;
+    /* color: #0d428c; */
+    color: white;
+}
+
+#html:hover svg,
+#css:hover svg {
+    color: gold;
 }
 
 .code-selection-box h3 {
-    color: lightblue;
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0 15px;
 }
 
 .code-display-box {
     display: flex;
-    height: 500px;
+    height: 450px;
     width: 100%;
     justify-content: center;
     margin: 0 auto;
@@ -52,11 +68,11 @@
 
 pre {
     color: gold;
-    background: rgb(40, 40, 40);
+    background: #0d428c;;
     width: 100%;
-    margin: 15px;
+    /* margin: 5px; */
     padding: 20px;
     word-wrap: normal;
     overflow-y: scroll;
-    box-shadow: rgba(0, 0, 0, 0.3) 20px 0px 50px inset;
+    box-shadow: rgba(0, 0, 0, 0.6) 80px 0px 500px inset;
 }
